--- a/velociraptor.yml
+++ b/velociraptor.yml
@@ -7,10 +7,17 @@ scripts:
       - net
     watch: true
   test:
-    desc: Runs test
-    cmd: deno test
+    desc: Runs unit test
+    cmd: deno test --ignore=test/e2e
     allow:
       - read
+  e2e:
+    desc: Runs E2E test
+    cmd: deno test test/e2e --failfast
+    allow:
+      - read
+      - run
+    tsconfig: "./tsconfig.json"
   fmt:
     desc: Format code
     cmd: deno fmt --ignore=README.md,sample/front.md,sample/novels/
