--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -19,8 +19,8 @@ jobs:
       - name: Lint
         run: deno lint
       - name: Format Check
-        run: deno fmt --check --ignore=README.md,./.github/
+        run: deno fmt --check --ignore=README.md,.github/,sample/
       - name: Unit Test
         run: vr test
-      - name: Unit Test
+      - name: E2E Test
         run: deno test test/e2e/ --allow-net --allow-run --config ./tsconfig.json
