--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -14,14 +14,12 @@ jobs:
         uses: denoland/setup-deno@v1
         with:
           deno-version: v1.x
-      - name: Setup Velociraptor
-        uses: jurassiscripts/setup-velociraptor@v2
       - name: Lint
         run: deno lint
       - name: Format Check
-        run: deno fmt --check --ignore=README.md,.github/,sample/
+        run: deno task fmt --check 
       - name: Unit Test
-        run: vr test
+        run: deno task test
       - uses: actions/github-script@v3
         id: get-preview-url
         with:
@@ -34,4 +32,4 @@ jobs:
             const { data } = await commitStatus
             return data[0].target_url
       - name: E2E Test
-        run: BASE_URL=${{ steps.get-preview-url.outputs.result }} deno test --allow-net --allow-run --allow-env test/e2e/
+        run: BASE_URL=${{ steps.get-preview-url.outputs.result }} deno task e2e
